--- a/backend/xmobotscase/src/main/resources/application.properties
+++ b/backend/xmobotscase/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = drop-and-create
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=test1234
