--- a/backend/xmobotscase/pom.xml
+++ b/backend/xmobotscase/pom.xml
@@ -79,10 +79,10 @@
 			<version>3.19.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>5.2.10.RELEASE</version>
-		</dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+			<version>2.5.9</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
@@ -91,7 +91,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>5.2.10.RELEASE</version>
+			<version>6.1.2</version>
 		</dependency>
 	</dependencies>
 
