--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-images-uploading": "^3.1.7",
     "react-quill": "^2.0.0",
