--- a/backend/xmobotscase/src/main/resources/application.properties
+++ b/backend/xmobotscase/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
