Aerodromes in map and bugfix login

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "author": "José Paulo Bocelli Júnior",
   "version": "1.1.0",
-  "description": "Frontend from Aerodrome Runways Map",
+  "description": "Frontend from Aerodrome Map",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -49,10 +49,12 @@
     "@types/jest": "^27.5.2",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
+    "dms-to-decimal": "^0.0.6",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "highlight.js": "^11.7.0",
     "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "npm": "^8.13.2",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
@@ -62,6 +64,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-images-uploading": "^3.1.7",
+    "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -74,6 +77,7 @@
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.9",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.4",
     "@types/node": "^18.11.9",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
